cybersec-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cybersec-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - cybersec.raze.mx
    secretName: cybersec-tls-manual
  rules:
  - host: cybersec.raze.mx
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cybersec-demo
            port:
              number: 80
